Web page update
updated the contents of game
gave splash a framework

--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
 <div id="turn_indicator" align='center'> Turn: </div><br><br><br>
 <table width="100%"> 
 	<tr>
-		<td width='25%'> <div id='give-up' align='center'>give up?</div> </td>
+		<td width='25%' align='center'> <button type='submit'>give up?</button> </td>
 		<td width='50%'> <table width = '640'  hight = '640'  align='center' border='1' bgcolor="black">
 		
 	<tr>
