Links and buttons
made all the pieces in to buttons for easier implementation of onclick
made the give-up and play buttons link to the other page.

--- a/splash.html
+++ b/splash.html
@@ -9,7 +9,7 @@
                     
                 </td>
                 <td width='50%' align='center'>
-                    <button>play</button>
+                    <form action="game.html"><button>play</button></form>
                 </td>
                 <td width='25%' align='center'>
                     stats
