--- a/game.html
+++ b/game.html
@@ -118,7 +118,7 @@
 			
 		<tr>
 		 
-			<td id="row5col0"  bgcolor='red' align='center'  > <button id="1" align='center' onclick='CanLeft(0,5,1),CanRight(0,5,1)' class="P1"></button> </td>
+			<td id="row5col0"  bgcolor='red' align='center'  > <button id="1" align='center' onclick='ClearOption(),CanLeft(0,5,1),CanRight(0,5,1)' class="P1"></button> </td>
 			
 			<td  bgcolor='white'></td>
 	
